--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ng-reuseme",
-    "version": "0.0.0",
+    "version": "0.0.2",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -18,6 +18,7 @@
         "@angular/platform-browser": "^14.1.0",
         "@angular/platform-browser-dynamic": "^14.1.0",
         "@angular/router": "^14.1.0",
+        "normalize.css": "^8.0.1",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
